--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -10,10 +10,10 @@
         <!-- Header -->
         <header id="header">
             <div class="inner">
-                <a href="./" class="logo">動物園鴨鴨<span style="font-size:15px;">  動物園公開資訊搜尋引擎</span></a>
+                <a href="/" class="logo">動物園鴨鴨<span style="font-size:15px;">  動物園公開資訊搜尋引擎</span></a>
                 <nav id="nav">
-                    <a href="">首頁</a>
-                    <a href="./search/">資料查詢</a>
+                    <a href="/">首頁</a>
+                    <a href="/search/">資料查詢</a>
                     {% if request.user.is_authenticated %}
                         <!--
                         {% if request.user.is_superuser %}
