--- a/mysite/templates/zoo_info/search_menu.html
+++ b/mysite/templates/zoo_info/search_menu.html
@@ -5,8 +5,10 @@
     <div>
         <table>
             <tr>
+                <td><a href = "/search/area">園區</a></td>
                 <td><a href = "/search/animal">動物名稱</a></td>
                 <td><a href = "/search/zookeeper">飼育員</a></td>
+                <td><a href = "/search/habitat">生活環境</a></td>
             </tr>
         </table>
     </div>
