--- a/mysite/templates/zoo_info/search_by/zookeeper.html
+++ b/mysite/templates/zoo_info/search_by/zookeeper.html
@@ -26,7 +26,7 @@
                 <tr>
                     <td>{{zookeeper.keeper_id}}</td>
                     <td>{{zookeeper.name}}</td>
-                    <td>{{current_year|subtract:zookeeper.birth}}</td>
+                    <td>{{current_year|subtract:zookeeper.birth}} 歲</td>
                     <td>{{zookeeper.join_time}}</td>
                     <td>{{zookeeper.department}}</td>
                 </tr>
