--- a/mysite/templates/zoo_info/search_by/individual_animal.html
+++ b/mysite/templates/zoo_info/search_by/individual_animal.html
@@ -19,7 +19,7 @@
     </table>
 
     <form action="../animal">
-        <input type="submit" value="返回" />
+        <input type ="button" onclick="history.back()" value="回到上一頁"></input>
     </form>
 </div>
 
