--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -15,14 +15,11 @@
                     <a href="/">首頁</a>
                     <a href="/search/">資料查詢</a>
                     {% if request.user.is_authenticated %}
-                        <!--
-                        {% if request.user.is_superuser %}
-                            <a href="./game_status/">遊戲狀態</a>
-                            <a href="./search_userdata/">銀行存提款</a>
+
+                        {% if not request.user.is_superuser %}
+                            <a href="./personal_data/">個人收藏</a>
                         {% endif %}
-                        -->
-                        <a href="./personal_data/">個人資產</a>
-                        <a href="../accounts/logout/">登出</a>
+                        <a href="/accounts/logout/">登出</a>
                     {% else %}
                         <a href="/accounts/login/">登入</a>
                         <a href="/accounts/register/">註冊</a>
