zookeeper with foreignkey area & insert, modify personal_info functions

--- a/mysite/templates/zoo_info/search_by/zookeeper.html
+++ b/mysite/templates/zoo_info/search_by/zookeeper.html
@@ -31,7 +31,7 @@
                     <td><a href = "./{{zookeeper.keeper_id}}/">{{zookeeper.name}}</a></td>
                     <td>{{current_year|subtract:zookeeper.birth}} 歲</td>
                     <td>{{zookeeper.join_time}}</td>
-                    <td>{{zookeeper.department}}</td>
+                    <td>{{zookeeper.area_id.theme}}</td>
                 </tr>
             {% endfor %}
         </table>
