--- a/mysite/templates/zoo_info/superuser/zookeeper_insert.html
+++ b/mysite/templates/zoo_info/superuser/zookeeper_insert.html
@@ -23,7 +23,7 @@
                 </tr>
                 <tr>
                     <th>管區編碼</th>
-                    <td><input type="number", name = 'z_department'></td>
+                    <td><input type="number", name = 'z_area_id'></td>
                 </tr>
                 
             </table>
