--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -2,12 +2,38 @@
 {%load static%}
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel= stylesheet type="text/css" href="{%static "css/main.css"%}">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel= stylesheet href="{%static 'assets/css/main.css'%}">
 </head>
 
+
 <body>
-        <!-- Header -->
+
+    <!-- Header -->
+        <header id="header" class="alt">
+            <div class="logo"><a href="/">動物園鴨鴨 <span>動物園公開資訊搜索引擎</span></a></div>
+            <a href="#menu">Menu</a>
+        </header>
+
+    <!-- Nav -->
+        <nav id="menu">
+            <ul class="links">
+                <li><a href="/">首頁</a></li>
+                <li><a href="/search/">資料查詢</a></li>
+                {% if request.user.is_authenticated %}
+                    {% if not request.user.is_superuser %}
+                        <li><a href="./personal_data/">個人收藏</a></li>
+                    {% endif %}
+                    <li><a href="/accounts/logout/">登出</a></li>
+                {% else %}    
+                <li><a href="/accounts/login/">登入</a></li>
+                <li><a href="/accounts/register/">註冊</a></li>
+                {% endif %}
+            </ul>
+        </nav>
+
+<!--
+<body>
         <header id="header">
             <div class="inner">
                 <a href="/" class="logo">動物園鴨鴨<span style="font-size:15px;">  動物園公開資訊搜尋引擎</span></a>
@@ -27,6 +53,22 @@
                 </nav>
             </div>
         </header>
+-->
         {% block content %}
         {% endblock %}
+
+    <!-- Footer -->
+    <footer id="footer">
+
+        <div class="copyright">
+            &copy; 動物園鴨鴨. All rights reserved.
+        </div>
+    </footer>
+
+<!-- Scripts -->
+    <script src="{%static 'assets/js/jquery.min.js'%}"></script>
+    <script src="{%static 'assets/js/jquery.scrollex.min.js'%}"></script>
+    <script src="{%static 'assets/js/skel.min.js'%}"></script>
+    <script src="{%static 'assets/js/util.js'%}"></script>
+    <script src="{%static 'assets/js/main.js'%}"></script>
 </body>
