--- a/mysite/templates/home.html
+++ b/mysite/templates/home.html
@@ -1,15 +1,140 @@
 {% extends 'base.html' %}
+{%load static%}
 {% block content %}
     <!-- Banner -->
-    <section id="banner">
-        <div class="inner">
-            <h1>動物園鴨鴨: <span><br />動物園公開資訊搜尋引擎</span></h1>
-            <ul class="actions">
-                <li><a href="./stocks/" class="button alt">進入股票市場</a></li>
-                {% if not request.user.is_authenticated %}
-                    <li><a href="/accounts/login/" class="button alt">註冊/登入</a></li>
-                {%endif%}
-            </ul>
-        </div>
-    </section>
+		<!-- Banner -->
+        <section class="banner full">
+            <article>
+                <img src="{%static 'images/slide01.jpg'%}" alt="" />
+                <div class="inner">
+                    <header>
+                        <p>動物園公開資訊搜索引擎</p>
+                        <h3>動物園鴨鴨</h3>
+                    </header>
+                </div>
+            </article>
+            <article>
+                <img src="{%static 'images/slide02.jpg'%}" alt="" />
+                <div class="inner">
+                    <header>
+                        <p>動物園公開資訊搜索引擎</p>
+                        <h3>動物園鴨鴨</h3>
+                    </header>
+                </div>
+            </article>
+            <article>
+                <img src="{%static 'images/slide03.jpg'%}"  alt="" />
+                <div class="inner">
+                    <header>
+                        <p>動物園公開資訊搜索引擎</p>
+                        <h3>動物園鴨鴨</h3>
+                    </header>
+                </div>
+            </article>
+            <article>
+                <img src="{%static 'images/slide04.jpg'%}"  alt="" />
+                <div class="inner">
+                    <header>
+                        <p>動物園公開資訊搜索引擎</p>
+                        <h3>動物園鴨鴨</h3>
+                    </header>
+                </div>
+            </article>
+            <article>
+                <img src="{%static 'images/slide05.jpg'%}"  alt="" />
+                <div class="inner">
+                    <header>
+                        <p>動物園公開資訊搜索引擎</p>
+                        <h3>動物園鴨鴨</h3>
+                    </header>
+                </div>
+            </article>
+        </section>
+
+    <!-- One -->
+        <section id="one" class="wrapper style2">
+            <div class="inner">
+                <div class="grid-style">
+
+                    <div>
+                        <div class="box">
+                            <div class="image fit">
+                                <img src="{%static 'images/pic02.jpg'%}" alt="" />
+                            </div>
+                            <div class="content">
+                                <header class="align-center">
+                                    <h2>園區主題查詢</h2>
+                                    <p></p>
+                                </header>
+                                <p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada.</p>
+                                <footer class="align-center">
+                                    <a href="#" class="button alt">Learn More</a>
+                                </footer>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div>
+                        <div class="box">
+                            <div class="image fit">
+                                <img src="{%static 'images/pic03.jpg'%}" alt="" />
+                            </div>
+                            <div class="content">
+                                <header class="align-center">
+                                    <h2>動物資料查詢</h2>
+                                    <p></p>
+                                </header>
+                                <p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada.</p>
+                                <footer class="align-center">
+                                    <a href="#" class="button alt">Learn More</a>
+                                </footer>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+    <!-- Two -->
+        <section id="two" class="wrapper style3">
+            <div class="inner">
+                <header class="align-center">
+                    <p></p>
+                    <h2></h2>
+                </header>
+            </div>
+        </section>
+
+    <!-- Three -->
+        <section id="three" class="wrapper style2">
+            <div class="inner">
+                <header class="align-center">
+                    <p class="special">Nam vel ante sit amet libero scelerisque facilisis eleifend vitae urna</p>
+                    <h2>Morbi maximus justo</h2>
+                </header>
+                <div class="gallery">
+                    <div>
+                        <div class="image fit">
+                            <a href="#"><img src="{%static 'images/pic01.jpg'%}" alt="" /></a>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="image fit">
+                            <a href="#"><img src="{%static 'images/pic02.jpg'%}" alt="" /></a>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="image fit">
+                            <a href="#"><img src="{%static 'images/pic03.jpg'%}" alt="" /></a>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="image fit">
+                            <a href="#"><img src="{%static 'images/pic04.jpg'%}" alt="" /></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 {% endblock %}
