--- a/mysite/templates/zoo_info/search_by/animal_info.html
+++ b/mysite/templates/zoo_info/search_by/animal_info.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
+{%include 'base_search.html'%}
     <div>
         <h3>{{animal.animal_name}}</h3>
         <table>
