--- a/mysite/templates/zoo_info/search_by/area_info.html
+++ b/mysite/templates/zoo_info/search_by/area_info.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
+{%include 'base_search.html'%}
     <div>
         <H1>{{area.theme}}</H1>
     </div>
