--- a/mysite/templates/zoo_info/search_by/zookeeper_feed_info.html
+++ b/mysite/templates/zoo_info/search_by/zookeeper_feed_info.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+{%include 'base_search.html'%}
 {% load subtract %}
     <div>
         <H1>飼育員 {{zookeeper.name}}</H1>
