--- a/mysite/templates/home.html
+++ b/mysite/templates/home.html
@@ -66,9 +66,8 @@
                                     <h2>園區主題查詢</h2>
                                     <p></p>
                                 </header>
-                                <p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada.</p>
                                 <footer class="align-center">
-                                    <a href="#" class="button alt">Learn More</a>
+                                    <a href="./search/area/" class="button alt">Learn More</a>
                                 </footer>
                             </div>
                         </div>
@@ -84,9 +83,9 @@
                                     <h2>動物資料查詢</h2>
                                     <p></p>
                                 </header>
-                                <p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada.</p>
+                                
                                 <footer class="align-center">
-                                    <a href="#" class="button alt">Learn More</a>
+                                    <a href="./search/animal/" class="button alt">Learn More</a>
                                 </footer>
                             </div>
                         </div>
@@ -110,8 +109,8 @@
         <section id="three" class="wrapper style2">
             <div class="inner">
                 <header class="align-center">
-                    <p class="special">Nam vel ante sit amet libero scelerisque facilisis eleifend vitae urna</p>
-                    <h2>Morbi maximus justo</h2>
+                    <p class="special"></p>
+                    <h2>更多精美照片</h2>
                 </header>
                 <div class="gallery">
                     <div>
