--- a/mysite/templates/zoo_info/search_by/zookeeper.html
+++ b/mysite/templates/zoo_info/search_by/zookeeper.html
@@ -3,7 +3,7 @@
 {% block content %}
 {%include 'base_search.html'%}
 {% load subtract %}
-    <div>
+    <div id = "display_format">
         <form>
             <table>
                 <tr>
@@ -16,8 +16,6 @@
                 </tr>
             </table>
         </form>
-    </div>
-    <div>
         <table>
             <tr>
                 <th>員工編號</th>
