--- a/mysite/templates/zoo_info/search_menu.html
+++ b/mysite/templates/zoo_info/search_menu.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block content%}
     {%include 'base_search.html'%}
-    <h1>依類別查詢：</h1>
-        <div>
+        <div id="display_format">
+            <h2>依類別查詢：</h2>
             <table>
                 <tr>
                     <td><a href = "/search/area">園區資訊</a></td>
