--- a/mysite/static/assets/css/main.css
+++ b/mysite/static/assets/css/main.css
@@ -2592,6 +2592,7 @@
 	table {
 		margin: 0 0 2rem 0;
 		width: 100%;
+		
 	}
 
 		table tbody tr {
@@ -4322,7 +4323,23 @@
 			border-radius: 10px;
 			padding: 20px 30px 40px 40px;
 		}
-
+		#display_format {
+			margin-top:0px;
+			margin-left:50px;
+			margin-right:50px;
+			margin-bottom:0px;
+			border-radius: 10px;
+			padding: 20px 30px 70px 40px;
+		}
+		#insert {
+			margin-top:0px;
+			margin-left:300px;
+			margin-right:300px;
+			margin-bottom:0px;
+			border-radius: 10px;
+			padding: 20px 30px 70px 40px;
+		}
+	
 		#register_form {
 			margin-top:20px;
 			margin-left:350px;
