--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -21,13 +21,9 @@
                 <li><a href="/">首頁</a></li>
                 <li><a href="/search/">資料查詢</a></li>
                 {% if request.user.is_authenticated %}
-                    {% if not request.user.is_superuser %}
-                        <li><a href="./personal_data/">個人收藏</a></li>
-                    {% endif %}
                     <li><a href="/accounts/logout/">登出</a></li>
                 {% else %}    
-                <li><a href="/accounts/login/">登入</a></li>
-                <li><a href="/accounts/register/">註冊</a></li>
+                <li><a href="/accounts/login/">管理者登入</a></li>
                 {% endif %}
             </ul>
         </nav>
