--- a/mysite/templates/zoo_info/superuser/zookeeper_modify_animal.html
+++ b/mysite/templates/zoo_info/superuser/zookeeper_modify_animal.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-
+{%include 'base_search.html'%}
 <h2>{{the_zookeeper.name}} 飼育員</h2>
-    <div>
+    <div id = "display_format">
         <H3>負責動物：</H3>
         <table>
             <tr>
